# python-todo-backend

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  linter.yml  test.yml
api_tests/: test_main.py
